@@ -2,7 +2,7 @@ Source: stimmtausch
 Section: games
 Priority: optional
 Maintainer: Madison Scott-Clary <makyo@drab-makyo.com>
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper (>= 12),
                dh-golang,
                golang-any,
                golang-github-juju-loggo-dev
@@ -10,7 +10,6 @@ Standards-Version: 4.1.1
 Homepage: https://stimmtausch.com
 Vcs-Browser: https://github.com/makyo/stimmtausch
 Vcs-Git: https://github.com/makyo/stimmtausch.git
-XS-Go-Import-Path: github.com/makyo/stimmtausch
 Testsuite: autopkgtest-pkg-go
 
 Package: stimmtausch
