@@ -12,13 +12,5 @@
 
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
-
-# This has to be exported to make some magic below work.
-export DH_OPTIONS
-
-export DH_GOPKG := github.com/makyo/stimmtausch
-
-override_dh_auto_test:
-
 %:
 	dh $@ --buildsystem=golang --with=golang
